Fluid/native ads are 250px high by default

--- a/static/src/stylesheets/module/_adslot.scss
+++ b/static/src/stylesheets/module/_adslot.scss
@@ -626,6 +626,7 @@
  * Fluid ad slots don't have widths
  */
 .ad-slot--fluid {
+    min-height: 250px;
     width: auto;
     padding-left: 0;
     padding-right: 0;
