--- a/common/app/views/fragments/email/stylesheets/ink.scala.html
+++ b/common/app/views/fragments/email/stylesheets/ink.scala.html
@@ -48,9 +48,18 @@ img {
     -ms-interpolation-mode: bicubic;
     width: auto;
     max-width: 100%;
-    float: left;
     clear: both;
     display: block;
+}
+
+img.float-left {
+    float: left;
+    text-align: left;
+}
+
+img.float-right {
+    float: right;
+    text-align: right;
 }
 
 center {
