Make the DIV span 100% of the width

--- a/static/src/stylesheets/module/commercial/creatives/_revealer.scss
+++ b/static/src/stylesheets/module/commercial/creatives/_revealer.scss
@@ -14,8 +14,10 @@
         position: fixed;
         top: 0;
         left: 0;
+        width: 100%;
         background-size: cover;
         backface-visibility: hidden;
+        -webkit-transform: translate3d(0,0,0);
     }
 
     .creative__button {
