--- a/static/src/stylesheets/module/commercial/creatives/_revealer.scss
+++ b/static/src/stylesheets/module/commercial/creatives/_revealer.scss
@@ -17,7 +17,7 @@
         width: 100%;
         background-size: cover;
         backface-visibility: hidden;
-        -webkit-transform: translate3d(0,0,0);
+        -webkit-transform: translate3d(0, 0, 0);
     }
 
     .creative__button {
