--- a/static/src/javascripts/projects/common/views/commercial/survey/survey-adblock.html
+++ b/static/src/javascripts/projects/common/views/commercial/survey/survey-adblock.html
@@ -1,12 +1,12 @@
-<div class="survey-overlay survey-adblock js-survey-adblock u-h" data-link-name="adblock response overlay" role="dialog" aria-label="take part in our survey">
+<div class="survey-overlay survey-adblock js-survey-adblock is-hidden" data-link-name="adblock response overlay" role="dialog" aria-label="take part in our survey">
     <div class="survey-container">
         <% if (showCloseBtn) { %>
         <div class="survey-adblock-close js-survey-adblock-close">
             <%if (showCloseBtn === "delayed") { %>
-            <span class="site-message__close-btn js-survey-adblock__delayed-close u-h"><span class="countdown">5</span></span>
+            <span class="site-message__close-btn js-survey-adblock__delayed-close is-hidden"><span class="countdown">5</span></span>
             <% } %>
-            <button class="site-message__close-btn js-survey-adblock__close-btn u-h" data-link-name="hide survey message">
-                <span class="u-h">Close</span>
+            <button class="site-message__close-btn js-survey-adblock__close-btn is-hidden" data-link-name="hide survey message">
+                <span class="is-hidden">Close</span>
                 <%=crossIcon%>
             </button>
         </div>
