--- a/common/app/views/fragments/metaData.scala.html
+++ b/common/app/views/fragments/metaData.scala.html
@@ -7,7 +7,7 @@
 @import play.api.Play
 @import play.api.Play.current
 @import views.support.{SeoThumbnail, StripHtmlTags}
-@import conf.switches.Switches.{AmpSwitch, LiveBlogAmpSwitch, UseLinkPreconnect, ComscoreSwitch, CommercialSwitch, SmartAppBanner}
+@import conf.switches.Switches.{AmpSwitch, UseLinkPreconnect, ComscoreSwitch, CommercialSwitch, SmartAppBanner}
 
 @* Critical meta data that have an impact on rendering speed *@
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
@@ -45,16 +45,10 @@
 
     @Page.getContentPage(page).map { page =>
         @if(
-            (
-                page.item.tags.isArticle &&
-                !page.item.tags.isLiveBlog &&
-                !page.item.content.isImmersive &&
-                !page.item.tags.isQuiz &&
-                AmpSwitch.isSwitchedOn
-            ) || (
-                page.item.tags.isLiveBlog &&
-                LiveBlogAmpSwitch.isSwitchedOn
-            )
+            page.item.tags.isArticle &&
+            !page.item.content.isImmersive &&
+            !page.item.tags.isQuiz &&
+            AmpSwitch.isSwitchedOn
         ) {
             <link rel="amphtml" href="@AmpLinkTo{/@page.metadata.id}">
         }
