Pushing the CTA up the layer stack

--- a/static/src/stylesheets/module/commercial/creatives/_revealer.scss
+++ b/static/src/stylesheets/module/commercial/creatives/_revealer.scss
@@ -8,6 +8,7 @@
         width: 100%;
         clip: rect(0, auto, auto, 0);
         overflow: hidden;
+        z-index: 1;
     }
 
     .creative__background {
