adding more descriptive comments

--- a/static/src/stylesheets/layout/_header.scss
+++ b/static/src/stylesheets/layout/_header.scss
@@ -52,7 +52,7 @@ $c-guardian-services-action: #ffffff;
         width: 160px;
         height: 30px;
     }
-
+    //reseting the default height of the <object> element
     .logo-tagline {
         height: 0;
     }
