A more meaningful data link name for the dismiss button

--- a/static/src/javascripts/projects/common/views/commercial/survey/survey-adblock.html
+++ b/static/src/javascripts/projects/common/views/commercial/survey/survey-adblock.html
@@ -5,7 +5,7 @@
             <%if (showCloseBtn === "delayed") { %>
             <span class="site-message__close-btn js-survey-adblock__delayed-close is-hidden"><span class="countdown">5</span></span>
             <% } %>
-            <button class="site-message__close-btn js-survey-adblock__close-btn is-hidden" data-link-name="hide survey message">
+            <button class="site-message__close-btn js-survey-adblock__close-btn is-hidden" data-link-name="survey adblock dismissed">
                 <span class="is-hidden">Close</span>
                 <%=crossIcon%>
             </button>
