--- a/static/src/stylesheets/_common.scss
+++ b/static/src/stylesheets/_common.scss
@@ -5,7 +5,7 @@
 @import 'module/_weather';
 @import 'module/_tabs';
 @import 'module/_headline-list';
-@import 'module/_rich-links';
+@import 'module/onward/rich-links-enhanced';
 @import 'module/_tooltip';
 @import 'pasteup/buttons/styles';
 @import 'module/facia/_pagination';
