--- a/static/src/stylesheets/head.rich-links.scss
+++ b/static/src/stylesheets/head.rich-links.scss
@@ -22,5 +22,7 @@
 @import 'module/facia/tones';
 @import 'module/facia/_item';
 @import 'module/facia/_items';
-@import 'module/_rich-links';
+
+@import 'module/onward/rich-links-default.head';
+@import 'module/onward/rich-links-enhanced';
 @import 'module/content/_live-blog';
