--- a/static/src/stylesheets/module/onward/_rich-links-default.head.scss
+++ b/static/src/stylesheets/module/onward/_rich-links-default.head.scss
@@ -1,19 +1,3 @@
-// not-upgraded style (no-js / failures)
-//--------------------------------------
-
-.element-rich-link--not-upgraded {
-
-    &.element-rich-link--tag {
-        // only display tag based rich links when they are fully upgraded (as we have no link text)
-        // not using `display: none` here so spacefinder still sees it
-        height: 0;
-        width: 0;
-        margin: 0;
-        border: 0;
-        overflow: hidden;
-    }
-}
-
 // Base rich link styles
 //----------------------------------
 
@@ -30,11 +14,6 @@
 
 .rich-link .u-faux-block-link--hover {
     background-color: $neutral-6;
-}
-
-.rich-link__byline {
-    @include fs-header(3);
-    padding-right: $gs-gutter;
 }
 
 .rich-link__title {
@@ -56,8 +35,6 @@
 }
 
 .rich-link__arrow {
-    height: 24px;
-    width: 24px;
     display: inline-block;
 }
 
@@ -71,12 +48,8 @@
     font-weight: 500;
 }
 
-.rich-link__link {
-    text-decoration: none;
-
-    &.u-faux-block-link__overlay {
-        z-index: 2;
-    }
+.rich-link__link .u-faux-block-link__overlay {
+    z-index: 2;
 }
 
 .rich-link__container {
