Remove colour of social icons from critical css

--- a/static/src/stylesheets/content.scss
+++ b/static/src/stylesheets/content.scss
@@ -40,6 +40,8 @@
 @import 'module/content/_media.global';
 @import 'module/_loader';
 
+@import 'module/_social';
+
 @import 'module/content/_live-blog';
 
 @import 'module/_discussion';
