--- a/static/src/stylesheets/head.content.scss
+++ b/static/src/stylesheets/head.content.scss
@@ -18,7 +18,7 @@
 @import 'module/content/_content';
 @import 'module/content/_media.head';
 @import 'module/_breadcrumbs';
-@import 'module/_social';
+@import 'module/_social.head';
 @import 'module/_layout-hints';
 @import 'module/_live-pulse';
 @import 'module/_chapters';
