main media video element can be None...

--- a/article/app/views/fragments/mainMedia.scala.html
+++ b/article/app/views/fragments/mainMedia.scala.html
@@ -26,8 +26,8 @@
                                 showControlsAtStart = true,
                                 endSlatePath = EndSlateComponents.fromContent(article.content).toUriPath,
                                 overrideIsRatioHd = None,
-                                embedPath = Some(article.content.mainVideoCanonicalPath),
-                                path = Some(article.content.mainVideoCanonicalPath)
+                                embedPath = article.content.mainVideoCanonicalPath,
+                                path = article.content.mainVideoCanonicalPath
                             )
                         ) { player =>
                             @fragments.media.video(player, enhance = true, amp = amp)
