--- a/static/src/stylesheets/module/commercial/creatives/_revealer.scss
+++ b/static/src/stylesheets/module/commercial/creatives/_revealer.scss
@@ -8,6 +8,9 @@
         width: 100%;
         clip: rect(0, auto, auto, 0);
         overflow: hidden;
+
+        /* promoting the button up the layer stack will improve
+           perfs on Android devices */
         z-index: 1;
     }
 
@@ -18,6 +21,8 @@
         width: 100%;
         background-size: cover;
         backface-visibility: hidden;
+
+        /* promote to GPU layer hack: this is needed by older versions of iOS */
         -webkit-transform: translate3d(0, 0, 0);
     }
 
