--- a/admin/app/views/radiator.scala.html
+++ b/admin/app/views/radiator.scala.html
@@ -45,7 +45,7 @@
         Note, it will not show unless you enable the "External status widget" for the build in Teamcity
             for some reason the &js=1 hangs waiting for a http resp so just using the iframe version for now
         *@
-        <iframe src="http://teamcity.gu-web.net:8111/externalStatus.html?buildTypeId=dotcom_master"></iframe>
+        <iframe src="https://teamcity.gu-web.net/externalStatus.html?buildTypeId=dotcom_master"></iframe>
     </div>
 
 
