--- a/static/src/stylesheets/module/commercial/creatives/_revealer.scss
+++ b/static/src/stylesheets/module/commercial/creatives/_revealer.scss
@@ -19,6 +19,7 @@
         top: 0;
         left: 0;
         width: 100%;
+        background-position: center center;
         background-size: cover;
         backface-visibility: hidden;
 
