None of the creative layers should ever repeat

--- a/static/src/stylesheets/module/commercial/creatives/_fabric-video.scss
+++ b/static/src/stylesheets/module/commercial/creatives/_fabric-video.scss
@@ -32,6 +32,7 @@
         background-repeat: no-repeat;
     }
 
+    .creative__layer  { background-repeat: no-repeat; }
     .creative__layer1 { z-index: 1; }
     .creative__layer2 { z-index: 2; }
     .creative__layer3 { z-index: 3; }
