--- a/static/src/stylesheets/module/email/_iframe.scss
+++ b/static/src/stylesheets/module/email/_iframe.scss
@@ -51,7 +51,8 @@ body {
 @include mq($from: 184px) {
     .email-sub__form--footer,
     .email-sub__form--article,
-    .email-sub__form--plain {
+    .email-sub__form--plain,
+    .email-sub__form--plainDark {
         // Rounded inline input
         .email-sub__text-input {
             border-right: 0;
@@ -85,7 +86,8 @@ body {
     }
 
     .email-sub__form--footer,
-    .email-sub__form--plain {
+    .email-sub__form--plain,
+    .email-sub__form--plainDark {
         .email-sub__submit-input {
             padding-left: $gs-gutter / 2;
         }
@@ -95,7 +97,8 @@ body {
 // It's a fixed layout so only at this width do we want to apply these styles
 @include mq(183px, 183px) {
     .email-sub__form--footer,
-    .email-sub__form--plain {
+    .email-sub__form--plain,
+    .email-sub__form--plainDark {
         padding-right: $gs-gutter / 2;
 
         .email-sub__text-input {
@@ -142,6 +145,14 @@ body {
 * IFRAME PLAIN MODS
 */
 .email-sub--plain {
+    .email-sub__header,
+    .email-sub__label,
+    .email-sub__small {
+        display: none;
+    }
+}
+
+.email-sub--plainDark {
     .email-sub__header,
     .email-sub__label,
     .email-sub__small {
