--- a/static/src/stylesheets/module/email/_header.scss
+++ b/static/src/stylesheets/module/email/_header.scss
@@ -83,3 +83,15 @@
     }
 }
 
+// PLAIN DARK MODS
+.email-sub--plainDark {
+    .email-sub__message__description {
+        display: none;
+    }
+
+    .email-sub__message__headline {
+        color: #ffffff;
+        line-height: 2rem;
+    }
+}
+
