--- a/common/app/views/fragments/social.scala.html
+++ b/common/app/views/fragments/social.scala.html
@@ -1,9 +1,9 @@
 @(sharelinks: Seq[model.ShareLink], position: String = "bottom", iconModifier: String = "", isGallery: Boolean = false)
 
-<ul class="social social--@position u-unstyled u-cf" data-component="social">
+<ul class="social social--@position js-social--@position u-unstyled u-cf" data-component="social">
     @sharelinks.map { item: model.ShareLink =>
         <li class="social__item social__item--@item.css" data-link-name="@item.css">
-            <a  class="social__action social-icon-wrapper"
+            <a  class="social__action js-social__action--@position social-icon-wrapper"
                 data-link-name="social @position"
                 href="@item.href"
                 target="_blank"
