--- a/common/app/views/fragments/analytics/google.scala.html
+++ b/common/app/views/fragments/analytics/google.scala.html
@@ -92,6 +92,7 @@
                 var d = new Date().getTime();
                 if (d - referrerVars.value.time < 60 * 1000) { // One minute
                     ga('@{trackerName}.send', 'event', 'Click', 'Internal', referrerVars.value.tag, {
+                        nonInteraction: true, // to avoid affecting bounce rate
                         dimension12: referrerVars.value.path
                     });
                 }
