--- a/static/src/stylesheets/module/_adslot.scss
+++ b/static/src/stylesheets/module/_adslot.scss
@@ -637,6 +637,17 @@
     padding-left: 0;
     padding-right: 0;
     padding-bottom: 0;
+
+    &.ad-slot--liveblog-inline {
+        @include mq(mobile) {
+            margin-left: $gs-gutter / -2;
+            margin-right: $gs-gutter / -2;
+        }
+        @include mq(mobileLandscape, $until: tablet) {
+            margin-left: -$gs-gutter;
+            margin-right: -$gs-gutter;
+        }
+    }
 }
 
 .ad-slot--fabric-v1 {
