use lower case instead of camel case

--- a/static/src/stylesheets/module/email/_header.scss
+++ b/static/src/stylesheets/module/email/_header.scss
@@ -84,7 +84,7 @@
 }
 
 // PLAIN DARK MODS
-.email-sub--plainDark {
+.email-sub--plaindark {
     .email-sub__message__description {
         display: none;
     }
