use neutral 4 for button

--- a/static/src/stylesheets/module/email/_form.scss
+++ b/static/src/stylesheets/module/email/_form.scss
@@ -310,8 +310,8 @@
     padding: 0;
 
     .email-sub__submit-input {
-        background-color: #DDDBD7;
-        border-color: #DDDBD7;
+        background-color: $neutral-4;
+        border-color: $neutral-4;
         color: $neutral-1;
     }
 
