Update quiz question to inline-block instead of block style

--- a/static/src/stylesheets/module/atoms/_quiz.scss
+++ b/static/src/stylesheets/module/atoms/_quiz.scss
@@ -23,7 +23,7 @@
 // fieldset > legend
 .atom-quiz__question-text {
     margin-bottom: $gs-baseline;
-    display: block;
+    display: inline-block;
 
     &:before {
         counter-increment: quiz-question;
