apply style to updated times in amp live blog

--- a/common/app/views/fragments/amp/stylesheets/liveBlog.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/liveBlog.scala.html
@@ -50,6 +50,17 @@ ul {
     font-weight: bold;
 }
 
+.updated-time {
+    font-size: 0.75rem;
+    line-height: 1rem;
+    font-family: "Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
+    color: #767676;
+    position: absolute;
+    right: 1.25rem;
+    bottom: 0.25rem;
+    margin: 0;
+}
+
 .block-time__absolute {
     display: none;
 }
