--- a/static/src/stylesheets/module/survey/_weekend-reading.scss
+++ b/static/src/stylesheets/module/survey/_weekend-reading.scss
@@ -18,7 +18,7 @@
     padding-bottom: $gs-baseline * 2;
 }
 
-.weekend-reading-email {
+.weekend-reading {
 
     .email-signup {
         //No script tag
@@ -27,75 +27,27 @@
             padding: 0 .3rem;
         }
 
-        .fsLabel {
-            @include fs-header(2);
-
-            color: #ffffff;
-            padding: 0 .3rem;
-
-        }
-
-        .fsPagination {
-            margin: 0;
-        }
-
-        .fsRequiredMarker {
-            display: none;
-        }
-
-        .fsField {
-            @include fs-textSans(2);
-            width: 100%;
+        .email-sub__lozenge {
+            border-color: #ffffff;
             border-radius: 100px;
-            border: 0;
-            height: 32px;
-            padding-left: 1rem;
-            box-sizing: border-box;
-            margin-bottom: $gs-baseline;
+            float: left;
+            width: 70%;
+            height: 3em;
+            margin-bottom: 10px;
+
+            @include mq($until: tablet) {
+                width: 100%;
+            }
         }
 
         .email-sub__submit-input {
-            border-color:#ffffff;
-            border-radius:100px;
-            float:left;
-            width:70%;
-            margin-bottom:10px;
+            width: 25%;
+            margin: 0px 0px 10px 3%;
 
-        .fsSubmitButton {
-            @include fs-textSans(2);
-            display: inline-block;
-            float: left;
-            width: 100%;
-            height: 32px;
-            line-height: 28px;
-            overflow: hidden;
-            margin-bottom: $gs-baseline;
-            border-radius: 15px;
-            border: 1px solid currentColor;
-            color: #ffffff;
-            background-color: transparent;
-
-            &:hover,
-            &:focus,
-            &:active {
-                border-color: darken(#ffffff, 15%);
+            @include mq($until: tablet) {
+                width: 100%;
+                margin-left: 0;
             }
-
-        }
-
-        .fsValidationError {
-            background-color: $news-main-1;
-
-            .fsLabel {
-                color: #ffffff;
-                background-image: none;
-                padding: 0 .3rem;
-            }
-        }
-
-        .fsError {
-            margin: 0 .3rem;
-
         }
     }
 
@@ -109,79 +61,71 @@
         margin-bottom: 1rem;
     }
 
-    .email-signup__action-button {
-        width: 100%;
-        background-color: $news-main-1;
-        border: 2px solid $guardian-brand-light;
-        border-radius: 100px;
-        height: 2.5rem;
-        color: #ff0000;
-        margin-bottom: 1rem;
-    }
-
     .email-signup__aside-text {
         @include fs-textSans(2);
-
         color: $guardian-brand-light;
-        padding: 0 .3rem;
-    }
+        width: 65%;
+        margin-left: 2%;
 
-    .weekend-read-header {
-        color: #ffffff;
-    }
-
-    .weekend-read-header__heading {
-        @include fs-header(2);
-
-        padding: 0 .3rem;
-    }
-
-    .weekend-read-header__text {
-        @include fs-bodyCopy(2);
-
-        padding: 0 .3rem;
-    }
-
-    .weekend-read-header__terms {
-        @include fs-textSans(2);
-        padding-left: .3rem;
-        padding-bottom: 20px;
-        color: $guardian-brand-light;
-    }
-
-    .weekend-read-sample {
-        margin-top: $gs-baseline;
-        background-color: #ffffff;
-    }
-
-    .weekend-read-sample__button {
-        @include fs-textSans(2);
-        position: relative;
-        color: $neutral-1;
-        border: thin solid $neutral-3;
-        background-color: transparent;
-        height: 32px;
-        line-height: 28px;
-        border-radius: 100px;
-        padding-left: 12px;
-        padding-right: 32px;
-
-        &:hover,
-        &:focus,
-        &:active {
-            border-color: $neutral-2;
-        }
-
-        .inline-arrow-right {
-            fill: $neutral-2;
-            position: absolute;
-            right: 2px;
-            top: 1px;
+        @include mq($until: tablet) {
+            width: 95%;
         }
     }
 
     .email-signup__aside-text__frequency {
         color: #ffffff;
         float: right;
-        margin-right: 30%;
     }
+}
+
+.weekend-read-header {
+    color: #ffffff;
+}
+
+.weekend-read-header__heading {
+    @include fs-header(2);
+    padding: 0 .3rem;
+}
+
+.weekend-read-header__text {
+    @include fs-bodyCopy(2);
+    padding: 0 .3rem;
+}
+
+.weekend-read-header__terms {
+    @include fs-textSans(2);
+    padding-left: .3rem;
+    padding-bottom: 20px;
+    color: $guardian-brand-light;
+}
+
+.weekend-read-sample {
+    margin-top: $gs-baseline;
+    background-color: #ffffff;
+    }
+
+.weekend-read-sample__button {
+    @include fs-textSans(2);
+    position: relative;
+    color: $neutral-1;
+    border: thin solid $neutral-3;
+    background-color: transparent;
+    height: 32px;
+    line-height: 28px;
+    border-radius: 100px;
+    padding-left: 12px;
+    padding-right: 32px;
+
+    &:hover,
+    &:focus,
+    &:active {
+        border-color: $neutral-2;
+    }
+
+    .inline-arrow-right {
+        fill: $neutral-2;
+        position: absolute;
+        right: 2px;
+        top: 1px;
+    }
+}
