--- a/static/src/stylesheets/module/commercial/_adverts.scss
+++ b/static/src/stylesheets/module/commercial/_adverts.scss
@@ -43,7 +43,7 @@
         padding: 0;
     }
 
-    @include mq(mobileLandscape, desktop) {
+    @include mq(mobileLandscape, leftCol) {
         > .adverts__header {
             flex-direction: row;
             justify-content: space-between;
@@ -127,7 +127,7 @@
         color: #ffffff;
         display: flex;
 
-        @include mq($until: desktop) {
+        @include mq($until: leftCol) {
             align-items: center;
 
             .inline-marque-54 {
@@ -144,7 +144,7 @@
             }
         }
 
-        @include mq(desktop) {
+        @include mq(leftCol) {
             flex-direction: column;
 
             /* http://alistapart.com/article/axiomatic-css-and-lobotomized-owls */
@@ -677,7 +677,7 @@
         @include fs-headline(1);
         color: #ffffff;
 
-        @include mq($until: desktop) {
+        @include mq($until: leftCol) {
             display: none;
         }
 
