Update the colours for the weekend reading page

--- a/applications/app/views/survey/weekendReading.scala.html
+++ b/applications/app/views/survey/weekendReading.scala.html
@@ -20,7 +20,7 @@
 
             <div class="content__main-column main__column--horizontal-bar">
                 <header class="weekend-read-header">
-                    <h1 class="weekend-read-header__heading">Weekend reading</h1>
+                    <h1 class="weekend-read-header__heading">weekend<span class="weekend-reading-pink"> reading</span></h1>
 
                     <p class="weekend-read-header__text">Every Saturday, we'll email you our editors' picks of the best stuff you didn't have time to read during the week - from features and news analysis to lifestyle and culture.</p>
 
