type sizes changed, illustration added

--- a/applications/app/views/survey/weekendReading.scala.html
+++ b/applications/app/views/survey/weekendReading.scala.html
@@ -6,10 +6,8 @@
 @surveyMain(surveyPage) {
     <div class="illustration-container">
         <div class="content">
-            <div class="gs-container">
                 <div class="content__main-column">
-                @fragments.inlineSvg("my-digest", "illustration")
-                </div>
+                @fragments.inlineSvg("weekend-reading", "illustration")
             </div>
         </div>
     </div>
