Change copy, improve styling, pass data- properties

--- a/applications/app/views/survey/weekendReading.scala.html
+++ b/applications/app/views/survey/weekendReading.scala.html
@@ -16,13 +16,17 @@
                 <header class="weekend-read-header">
                     <h1 class="weekend-read-header__heading">weekend<span class="weekend-reading-pink"> reading</span></h1>
 
-                    <p class="weekend-read-header__text">Every Saturday, we'll email you our editors' picks of the best stuff you didn't have time to read during the week - from features and news analysis to lifestyle and culture.</p>
-
+                    <p class="weekend-read-header__text">Busy week? Of course it was. Sign up for our Saturday morning email and we'll send you our editors' picks of the best stuff you didn't have time to read - from features and news analysis to lifestyle and culture.</p>
                 </header>
+
                 <div class="weekend-reading">
 
+                    <div class="weekend-read-header__terms">
+                        <span>We will be trialling this email through the autumn and hope you'll send us plenty of feedback</span>
+                    </div>
+
                     <div class="email-signup" data-component="weekend-reading">
-                        <form action="https://www.theguardian.com/email" method="post" class="email-sub__form js-email-sub__form email-sub__form--article" data-email-form-type="article" data-email-list-id="3742">
+                        <form action="https://www.theguardian.com/email" method="post" class="email-sub__form js-email-sub__form email-sub__form--article" data-email-form-type="article" data-email-list-id="3744" data-link-name="referrer-unknown">
                           <div class="email-sub__form-wrapper">
                             <div class="email-sub__inline-label js-email-sub__inline-label">
                               <label class="email-sub__label js-email-sub__label" for="article-email-sub-input">
@@ -35,8 +39,8 @@
                               </label>
                               <input class="email-sub__lozenge email-sub__text-input js-email-sub__text-input"
                               data-link-name="weekend-reading-input" type="email" name="email" required/>
-                              <input class="js-email-sub__listid-input" type="hidden" name="listId" value="3742"/>
-                              <input class="js-email-sub__campaignCode-input" type="hidden" name="campaignCode" value="HELLOWORLD"/>
+                              <input class="js-email-sub__listid-input" type="hidden" name="listId" value="3744"/>
+                              <input class="js-email-sub__referrer-input" type="hidden" name="referrer" value="unknown"/>
                               <button type="submit" class="email-sub__lozenge email-sub__submit-input js-email-sub__submit-input button button--tertiary"
                               data-link-name="weekend-reading-submit">
                                   <span class="inline-envelope inline-icon submit-input__icon">
