--- a/static/src/stylesheets/module/survey/_weekend-reading.scss
+++ b/static/src/stylesheets/module/survey/_weekend-reading.scss
@@ -24,10 +24,18 @@
 }
 
 .email-signup-main:before {
-    height: 26px;
+    height: $gs-baseline * 2;
     content: '';
     background-color: $features-support-1;
     display: block;
+
+    @include mq(tablet) {
+        height: $gs-baseline * 4;
+    }
+
+    @include mq(desktop) {
+        height: $gs-baseline * 3;
+    }
 }
 
 .email-signup {
@@ -39,7 +47,6 @@
     content: '';
     display: block;
     border-bottom: 2px solid $features-support-3;
-
 }
 
 .content {
@@ -47,6 +54,7 @@
 }
 
 .weekend-reading {
+    margin-top: $gs-baseline;
 
     .email-signup {
         //No script tag
@@ -61,7 +69,7 @@
             float: left;
             width: 70%;
             height: 3em;
-            margin-bottom: 10px;
+            margin-bottom: $gs-baseline;
 
             &:hover,
             &:focus,
@@ -76,7 +84,7 @@
 
         .email-sub__submit-input {
             width: 25%;
-            margin: 0px 0px 10px 3%;
+            margin: 0px 0px $gs-baseline 3%;
             background-color: inherit;
 
             @include mq($until: tablet) {
@@ -84,16 +92,6 @@
                 margin-left: 0;
             }
         }
-    }
-
-    .email-signup__field-input {
-        width: 100%;
-        border-radius: 100px;
-        border: 0;
-        height: 2.5em;
-        padding-left: 1rem;
-        box-sizing: border-box;
-        margin-bottom: 1rem;
     }
 
     .email-signup__aside-text {
@@ -122,8 +120,8 @@
     padding: 0 .3rem;
 
     @include mq($from: tablet) {
-    font-size: 36px;
-    margin-top: 8px;
+        font-size: 36px;
+        margin-top: 8px;
   }
 
     .weekend-reading-pink {
@@ -137,16 +135,15 @@
     margin-top: $gs-baseline / 2;
 
     @include mq($from: tablet) {
-    @include fs-bodyCopy(3);
-    margin-top: $gs-baseline;
+        @include fs-bodyCopy(3);
+        margin-top: $gs-baseline;
   }
 }
 
 .weekend-read-header__terms {
     @include fs-textSans(2);
-    padding-left: .3rem;
-    padding-bottom: 20px;
-    color: $guardian-brand-light;
+    padding: 0 .3rem $gs-baseline * 2 .3rem;
+    color: $features-support-3;
 }
 
 .weekend-read-sample {
@@ -156,6 +153,7 @@
 
 .weekend-read-sample__button {
     @include fs-textSans(2);
+    margin: $gs-baseline 0;
     position: relative;
     color: $neutral-1;
     border: thin solid $neutral-3;
